package db.bean; 
public class UserInfoBean { 
    private String userId; 
    private int userNo;  
} 
