package db.dao;

import java.sql.PreparedStatement;
import java.sql.SQLException;

import db.bean.QuizBean;
import frame.exception.ResourceException;

public class GenreDao extends Dao {
	
}
