package quizoo;

import frame.Service;
import frame.context.RequestContext;
import frame.context.ResponseContext;

public class Login extends Service{

	@Override
	public void execute(RequestContext req, ResponseContext res) {
		String id = null;
		req.setId(id);
		
	}

}
