package quizoo.service; 
public abstract class Service { 
    public abstract void do(RequestContext req, ResponseContext res); 
} 
